--- a/css/style.css
+++ b/css/style.css
@@ -69,3 +69,57 @@ form button:hover {
     margin-top: 20px;
     text-align: center;
 }
+
+.toasts-container {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+}
+
+.toast {
+    font-size: 17px;
+    color: #f1f1f1;
+    padding: 10px;
+    margin: 10px 0;
+    min-width: 150px;
+    border-radius: 2px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
